@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.745 2006-04-17 21:01:43 castaglia Exp $
+$Id: NEWS,v 1.746 2006-04-17 22:20:55 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -29,6 +29,7 @@ CVS
 - Bug 2611 - CreateHome should allow non-root-owned parent directories.
 - Bug 2686 - Allow CCC command but still require SSL/TLS protection during
   authentication.
+- Bug 2628 - SQLHomedirOnDemand should be deprecated.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
